tests/errors/type_index/int_on_duck.duck
type X = { name: String };
type Y = X[Int];

fn main() {
    let x: Y = 5;
}
